k8s/flux/clusters/talos-cluster/infra/storage/synology-dsm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synology-dsm
  namespace: synology-dsm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: synology-dsm
  namespace: synology-dsm
subsets:
- addresses:
  - ip: 172.21.0.20
  ports:
  - port: 5000
