k8s/flux/clusters/talos-cluster/infra/storage/synology-dsm/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: synology-dsm
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`synology.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: synology-dsm
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`synology.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: synology-dsm
      port: 5000
      passHostHeader: true
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
